# python-template-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
